[package]
name = "crystals-kyber-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.79", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
pretty_env_logger = "0.4.0"
log = "0.4"
thiserror = "1.0.32"
hex = "0.4"
rand = "0.8.5"
sha3 = "0.10.2"
